--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
         <!-- WhatsApp -->
         <a
-          href="https://wa.me/628XXXXXXXXXX"
+          href="https://wa.me/6282278042169"
           target="_blank"
           class="mt-4 text-green-600 font-semibold"
         >
@@ -127,3 +127,4 @@
 
 </body>
 </html>
+
